# smanager

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
smanager/: __init__.py  cli.py  config.py  history.py  job.py  local.py  sweep.py  templates.py  webapp.py
smanager/static/: web.css  web.js
smanager/templates/web/: base.html  dashboard.html  job_detail.html  status_fragment.html  tab_content.html
tests/: __init__.py  test_config.py  test_history.py  test_job.py  test_local.py  test_sweep.py  test_webapp.py
